<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".TableActivity"
        >

    <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/tv_title"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_below="@+id/tv_title"
            android:id="@+id/table_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
    >

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:background="@color/rowPar"
                android:layout_margin="1dp"
                android:text="@string/calidad_sucursal"/>

        <TextView
                android:id="@+id/calidad_actual_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="1dp"
                android:textSize="10sp"
                android:background="@color/rowPar"
                android:textColor="@color/black"
                android:text="@string/actual"/>

        <TextView
                android:id="@+id/calidad_proy_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="1dp"
                android:textSize="10sp"
                android:background="@color/rowPar"
                android:textColor="@color/black"
                android:text="@string/proy"/>

        <TextView
                android:id="@+id/tv_meta"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="1dp"
                android:textSize="10sp"
                android:background="@color/rowPar"
                android:textColor="@color/black"
                android:text="@string/meta"/>

        <TextView
                android:id="@+id/tv_rank"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="@string/rank"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:background="@color/rowPar"/>

        <TextView
                android:id="@+id/tv_taso"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="Taso"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:background="@color/rowPar"/>

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/calidad_viewpager_relative"
            android:layout_below="@+id/table_names"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

        <android.support.v4.view.ViewPager
                android:id="@+id/table_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/pageIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/viewPager"
                    app:layout_constraintEnd_toEndOf="@id/viewPager"
                    app:layout_constraintBottom_toBottomOf="@id/viewPager"
                    app:dotsColor="@color/colorAccent"
                    app:selectedDotColor="@color/colorPrimaryDark"
                    app:dotsSize="5dp"
            />

        </android.support.v4.view.ViewPager>

    </RelativeLayout>

</RelativeLayout>